kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
